키프레임 사각형 좌표변경 로딩 애니메이션

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>도형 로딩 애니메이션</title>
+    <title>키프레임 사각형 좌표변경 로딩 애니메이션</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="loading">
-      <span></span>
       <span></span>
       <span></span>
     </div>
