드롭다운 네비게이션

--- a/index.html
+++ b/index.html
@@ -2,55 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>더블 보더 레디우스 애니메이션</title>
+    <title>드롭다운 네비게이션</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="square">
-        <span></span>
-        <span></span>
-        <span></span>
-        <div>
-          <h2>Heading Text</h2>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-            has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has
-            survived not only
-          </p>
-          <a href="#none">Read More</a>
-        </div>
-      </div>
-      <div class="square">
-        <span></span>
-        <span></span>
-        <span></span>
-        <div>
-          <h2>Heading Text</h2>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-            has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has
-            survived not only
-          </p>
-          <a href="#none">Read More</a>
-        </div>
-      </div>
-      <div class="square">
-        <span></span>
-        <span></span>
-        <span></span>
-        <div>
-          <h2>Heading Text</h2>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-            has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a type specimen book. It has
-            survived not only
-          </p>
-          <a href="#none">Read More</a>
-        </div>
+    <div class="dropdown">
+      <button class="dropdown-btn">Real Estate Type</button>
+      <div class="dropdown-submenu">
+        <a href="#none">All</a>
+        <a href="#none">One room</a>
+        <a href="#none">1.5 rooms</a>
+        <a href="#none">Two room</a>
+        <a href="#none">Three room</a>
+        <a href="#none">Officetel</a>
+        <a href="#none">Apartmet</a>
       </div>
     </div>
   </body>
