--- a/index.html
+++ b/index.html
@@ -2,20 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>드롭다운 네비게이션</title>
+    <title>오버하면 상세설명 나타나는 상품목록</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="dropdown">
-      <button class="dropdown-btn">Real Estate Type</button>
-      <div class="dropdown-submenu">
-        <a href="#none">All</a>
-        <a href="#none">One room</a>
-        <a href="#none">1.5 rooms</a>
-        <a href="#none">Two room</a>
-        <a href="#none">Three room</a>
-        <a href="#none">Officetel</a>
-        <a href="#none">Apartmet</a>
+    <div class="items">
+      <div class="item">
+        <img src="images/product-01.png" alt="" />
+        <div class="caption">
+          <h2>Rirakuma doll 25cm</h2>
+          <p>
+            The owner of the most popular and cute looks Rilakkuma ~! Rilakkuma giant - It is size
+            sale to small size.
+          </p>
+          <p>Price : <s>$12</s> → $10</p>
+          <a href="#none">View Details</a>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/product-02.png" alt="" />
+        <div class="caption">
+          <h2>Connie doll (110cm)</h2>
+          <p>
+            The owner of the most popular and cute looks Rilakkuma ~! Rilakkuma giant - It is size
+            sale to small size.
+          </p>
+          <p>Price : <s>$42</s> → $40</p>
+          <a href="">View Details</a>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/product-03.png" alt="" />
+        <div class="caption">
+          <h2>Cacao Friends figure</h2>
+          <p>
+            The owner of the most popular and cute looks Rilakkuma ~! Rilakkuma giant - It is size
+            sale to small size.
+          </p>
+          <p>Price : <s>$32</s> → $30</p>
+          <a href="">View Details</a>
+        </div>
       </div>
     </div>
   </body>
