--- a/index.html
+++ b/index.html
@@ -2,46 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>오버하면 상세설명 나타나는 상품목록</title>
+    <title>마우스 오버되면 나타나는 툴팁</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="items">
-      <div class="item">
-        <img src="images/product-01.png" alt="" />
-        <div class="caption">
-          <h2>Rirakuma doll 25cm</h2>
-          <p>
-            The owner of the most popular and cute looks Rilakkuma ~! Rilakkuma giant - It is size
-            sale to small size.
-          </p>
-          <p>Price : <s>$12</s> → $10</p>
-          <a href="#none">View Details</a>
-        </div>
+    <div class="container">
+      <div class="icon">
+        <img src="images/icon-01.png" />
+        <span> This HTML tutorial contains hundreds of HTML examples. </span>
       </div>
-      <div class="item">
-        <img src="images/product-02.png" alt="" />
-        <div class="caption">
-          <h2>Connie doll (110cm)</h2>
-          <p>
-            The owner of the most popular and cute looks Rilakkuma ~! Rilakkuma giant - It is size
-            sale to small size.
-          </p>
-          <p>Price : <s>$42</s> → $40</p>
-          <a href="">View Details</a>
-        </div>
+      <div class="icon">
+        <img src="images/icon-02.png" />
+        <span> This CSS tutorial contains hundreds of CSS examples. </span>
       </div>
-      <div class="item">
-        <img src="images/product-03.png" alt="" />
-        <div class="caption">
-          <h2>Cacao Friends figure</h2>
-          <p>
-            The owner of the most popular and cute looks Rilakkuma ~! Rilakkuma giant - It is size
-            sale to small size.
-          </p>
-          <p>Price : <s>$32</s> → $30</p>
-          <a href="">View Details</a>
-        </div>
+      <div class="icon">
+        <img src="images/icon-03.png" />
+        <span> AngularJS extends HTML with new attributes. </span>
+      </div>
+      <div class="icon">
+        <img src="images/icon-04.png" />
+        <span> Node.js is an open source server environment. </span>
       </div>
     </div>
   </body>
